--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: lightblue;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+span {
+  font-size: 11rem;
+  color: blue;
+  font-weight: bolder;
+  line-height: 1;
+  display: inline-block;
+}
+
+span.active {
+  animation: jump 2s ease-in-out;
+}
+
+@keyframes jump {
+  0% {
+      transform: translate(0,0) rotate(180deg);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+      transform: scale(2.5) translate(0,-150px);
   }
 }
